--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,7 @@ body {
 /********** CARD COMPONENT **********/
 .card-container {
   background: var(--cardBackground);
-  box-shadow: 0px 20px 20px -10px rgba(23, 25, 41, 0.203087);
+  box-shadow: 0 2rem 2rem -1rem rgba(23, 25, 41, 0.203087);
   border-radius: 0.8rem;
   max-width: 32.7rem;
   overflow: hidden;
